fixed grid gap

--- a/css/main.scss
+++ b/css/main.scss
@@ -192,7 +192,7 @@ body {
 .headline {
     grid-row: 2;
     grid-column: 4;
-    grid-gap: 1vmax;
+    grid-gap: 1vmax 0;
     align-self: center;
     display: grid;
     justify-items: center;
@@ -224,7 +224,7 @@ body {
 .header {
     grid-row: 1;
     min-height: 100vh;
-    grid-gap: 1vmax;
+    grid-gap: 1vmax 0;
 }
 @media all and (max-width: 599px){
     .header {
